--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,9 @@ android {
     buildFeatures {
         dataBinding true
     }
+    buildFeatures {
+        viewBinding = true
+    }
 }
 
 dependencies {
