--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,9 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id 'androidx.navigation.safeargs.kotlin'
     id 'dagger.hilt.android.plugin'
+
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -61,9 +62,11 @@ dependencies {
     // Material Components
     implementation 'com.google.android.material:material:1.3.0-alpha03'
 
+
+    def nav_version = "2.3.5"
     // Navigation Component
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
+    implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
+    implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
 
     // Room components
     implementation "androidx.room:room-runtime:2.3.0"
