--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Recipes">
+        android:theme="@style/Theme.Recipes"
+        android:usesCleartextTraffic="true">
+
         <activity
             android:label="Details"
             android:name=".ui.DetailActivity"
