create lottie splash screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,4 +117,7 @@ dependencies {
 
     // Jsoup
     implementation 'org.jsoup:jsoup:1.13.1'
+
+    //lottie
+    implementation 'com.airbnb.android:lottie:4.0.0'
 }
